--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@ body {
 
 html {
     /*background: blue;*/
-    max-width: 1400px;
+    max-width: 1450px;
 }
 
 #header {
@@ -90,6 +90,7 @@ nav {
 .menu a:hover {
         border-top: 2px solid #0065FC;
         color: #0065FC;
+        padding-top:20px;
     }
 
 .liens-container {
@@ -192,7 +193,7 @@ input{
 .hebergement-bleu {
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 72%;
     border-radius: 15px;
     /*border: solid blue;*/
     background:#F2F2F2;
@@ -217,9 +218,11 @@ input{
 .populaire-rouge {
     display: flex;
     flex-direction: column;
-    align-items: baseline;
+    align-items: center;
+    justify-content:space-around;
     border-radius: 15px;
-    gap: 25px;
+    width:28%;
+    gap: 20px;
     overflow: hidden;
     /*border: solid red;*/
     height:auto;
@@ -228,6 +231,7 @@ input{
 .populaire-jaune{
     display:flex;
     flex-direction:column;
+    align-items:center;
     width:100%;
     margin:2.5%;
     gap:30px;
@@ -259,6 +263,8 @@ input{
 
 .card-populaire {
     display: flex;
+    flex-direction:row;
+    justify-content:start;
     box-shadow: 20px 20px 50px 15px grey;
     transition: 0.2s;
     width: 90%;
@@ -285,7 +291,7 @@ input{
 .Img-populaire {
     object-fit: cover;
     border-radius: 15px 15px 15px 15px;
-    width: 40%;
+    width:100px;
     height: 111px;
     /*border:solid red;*/
 }
