--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,6 +28,7 @@ body {
     font-weight: 700;
     font-size: 22px;
     line-height: 26px;
+    width: 55%;
 }
 
 .rechercher {
@@ -115,7 +116,6 @@ nav {
             font-weight: 500;
             color: #0065FC;
             padding-top: 20px;
-            padding-bottom: 0px;
         }
 
 .liens-container {
@@ -141,8 +141,10 @@ nav {
     font-weight: 700;
     font-size: 18px;
     line-height: 21px;
-    text-align: center;
+    text-align: left;
     color: #000000;
+    margin-right: 40px;
+    width: 5%;
     /*border:solid yellow;*/
 }
 
@@ -186,7 +188,7 @@ nav {
 
 /*partie formulaire*/
 
-form {
+.form {
     display: flex;
     flex-direction: row;
 }
@@ -652,10 +654,16 @@ h5 {
         color: #0065FC;
     }
 
+    .form {
+        width: 100%;
+        justify-content: space-between;
+        padding-left: 17px;
+    }
+
     .rechercher {
         align-items: center;
         justify-content: center;
-        width: 40%;
+        width: 100%;
         /*border: solid green;*/
     }
 
@@ -766,10 +774,5 @@ h5 {
         margin-left: 20px;
         width: 100%;
         /*border: solid red;*/
-    }
-
-    body {
-        width: 90%;
-        padding: 3%;
     }
 }
