oubli du titre activite

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -194,7 +194,7 @@ input {
     outline: none;
 }
 
-.titre {
+.titre, .titre-activites {
     font-style: normal;
     font-weight: 700;
     font-size: 22px;
