reajusté les cadre populaire et populaire

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -246,7 +246,8 @@ input {
 .hebergement-bleu {
     display: flex;
     flex-direction: column;
-    width: 72%;
+    width: 67%;
+    height:auto;
     border-radius: 15px;
     /*border: solid blue;*/
     background: #F2F2F2;
@@ -283,7 +284,7 @@ input {
     align-items: center;
     justify-content: space-around;
     border-radius: 15px;
-    width: 35%;
+    width: 32%;
     gap: 20px;
     overflow: hidden;
     height: auto;
@@ -476,6 +477,7 @@ footer {
 .fa-solid, .fas {
     font-weight: 900;
     width: 1px;
+    margin-right:25px;
 }
 
 fa-info {
