--- a/.CSS/style.css
+++ b/.CSS/style.css
@@ -1,7 +1,11 @@
 ﻿/*toutes les marges de la page sont misent à 0 */
 
 * {
-    /*margin:0;*/
+    margin:0 auto;
+    Padding:0;
+    box-sizing:border-box;
+
+
 }
 
 html {
