--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,7 +10,7 @@ body {
     max-width: 1400px;
     width: 100%;
     margin: auto;
-    padding: 3%;
+    padding: 0px;
     background-color: white;
 }
 
@@ -53,7 +53,7 @@ body {
 .filtre {
     display: flex;
     justify-content: start;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
     width: 100%;
     /*border: solid green;*/
 }
@@ -61,9 +61,14 @@ body {
 #info {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 10px;
     font-weight: 400;
-    width: 80%;
+    width: 100%;
+}
+
+.fa-info {
+    height: 27px;
+    margin-top: 0px;
 }
 
 .main {
@@ -101,17 +106,17 @@ nav {
     color: #0065FC;
 }
 
-.menu a {
-    text-decoration: none;
-    color: black;
-}
+    .menu a {
+        text-decoration: none;
+        color: black;
+    }
 
-.menu a:hover {
-    border-top: 2px solid #0065FC;
-    font-weight: 500;
-    color: #0065FC;
-    padding-top: 20px;
-}
+        .menu a:hover {
+            border-top: 2px solid #0065FC;
+            font-weight: 500;
+            color: #0065FC;
+            padding-top: 20px;
+        }
 
 .liens-container {
     display: flex;
@@ -120,10 +125,10 @@ nav {
     /*border:solid red;*/
 }
 
-.liens-container a {
-    text-decoration: none;
-    color: black;
-}
+    .liens-container a {
+        text-decoration: none;
+        color: black;
+    }
 
 #lien-filtre {
     display: flex;
@@ -160,7 +165,7 @@ nav {
     color: blue;
     width: 136px;
     height: 48px;
-    border: 1px solid #F2F2F2;
+    border: 1px solid #D9D9D9;
     padding-left: 4px;
     padding-right: 4px;
     font-style: normal;
@@ -173,10 +178,10 @@ nav {
     width: 226px;
 }
 
-.lien:hover,
-.lien-dog:hover {
-    background-color: #DEEBFF;
-}
+    .lien:hover,
+    .lien-dog:hover {
+        background-color: #DEEBFF;
+    }
 
 
 /*partie formulaire*/
@@ -204,8 +209,8 @@ input {
 .star-populaire {
     display: flex;
     flex-direction: row;
-    margin-top: 15px;
-    padding-bottom: 20px;
+    margin-top: 10px;
+    padding-bottom: 10px;
 }
 
 .star-logement {
@@ -248,7 +253,7 @@ input {
     display: flex;
     flex-direction: column;
     width: 67%;
-    height: auto;
+    height: 626px;
     border-radius: 15px;
     /*border: solid blue;*/
     background: #F2F2F2;
@@ -288,7 +293,7 @@ input {
     width: 32%;
     gap: 20px;
     overflow: hidden;
-    height: auto;
+    height: 626px;
     background: #F2F2F2;
     /*border: solid red;*/
 }
@@ -315,9 +320,9 @@ input {
 .card-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
     font-weight: normal;
+    margin-left: 10px;
 }
 
 .card-hebergement {
@@ -351,16 +356,17 @@ input {
 
 .Img-hebergement {
     object-fit: cover;
-    border-radius: 15px 15px 15px 15px;
+    border-radius: 15px 15px 0px 0px;
     width: 100%;
-    height: 90px;
+    height: 111px;
 }
 
 .Img-populaire {
     object-fit: cover;
-    border-radius: 15px 15px 15px 15px;
-    width: 100px;
-    height: 111px;
+    border-radius: 15px 0px 0px 15px;
+    width: 127px;
+    height: 131px;
+    margin-top: 3px;
     /*border:solid red;*/
 }
 
@@ -374,6 +380,7 @@ input {
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin-top: 50px;
     /*border:solid red;*/
 }
 
@@ -386,12 +393,12 @@ input {
     width: 100%;
 }
 
-.images-activite .card-activite img {
-    object-fit: cover;
-    border-radius: 15px 15px 0px 0px;
-    width: 100%;
-    height: 250px;
-}
+    .images-activite .card-activite img {
+        object-fit: cover;
+        border-radius: 15px 15px 0px 0px;
+        width: 100%;
+        height: 444px;
+    }
 
 .card-activite {
     width: 20%;
@@ -409,19 +416,11 @@ footer {
     background-color: #E6E6E6;
     justify-content: space-around;
     margin-top: 40px;
+    text-decoration: none;
     /*border:solid blue;*/
 }
 
-.propos a {
-    text-decoration: none;
-    /*font-family: 'Raleway';*/
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    margin-top: 10px;
-    /*border:solid red;*/
-}
+
 
 .propos {
     display: flex;
@@ -431,9 +430,18 @@ footer {
     /*border: solid red;*/
 }
 
-.hebergement a {
+    .propos a {
+        text-decoration: none;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        margin-top: 10px;
+        /*border:solid red;*/
+    }
+
+.main a {
     text-decoration: none;
-    /*font-family: 'Raleway';*/
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -449,16 +457,17 @@ footer {
     /*border: solid green;*/
 }
 
-.assistance a {
-    text-decoration: none;
-    /*font-family: 'Raleway';*/
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    margin-top: 10px;
-    /*border:solid yellow;*/
-}
+    .hebergement a {
+        text-decoration: none;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        margin-top: 10px;
+        /*border: solid green;*/
+    }
+
+
 
 .assistance {
     display: flex;
@@ -467,6 +476,16 @@ footer {
     width: 20%;
     /*border: solid orange;*/
 }
+
+    .assistance a {
+        text-decoration: none;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        margin-top: 10px;
+        /*border:solid yellow;*/
+    }
 
 
 /*declaration de variables personnalisées dans la pseudo classe root
@@ -483,8 +502,8 @@ footer {
     margin-right: 25px;
 }
 
-fa-info {
-    margin-top: 25px;
+.fa-info {
+    /*margin-top: 25px;*/
 }
 
 .fa-star {
@@ -500,11 +519,20 @@ fa-info {
 }
 
 h5 {
-    /*font-family: 'Raleway';*/
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
+    text-align: start;
+    margin-top: 0px;
+}
+
+h2 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 26px;
+    margin-top: 50px;
 }
 
 #loca-icone {
@@ -513,61 +541,104 @@ h5 {
     background-color: #F2F2F2;
 }
 
+.fa-info {
+    margin-top: 3px;
+}
+
 
 /* sur les ecrans de 992px ou moins (tablette)*/
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
+
+
     nav {
         justify-content: start;
         margin: 0 0 0 0;
         gap: 30%;
     }
+
     .filtre {
         width: 100%;
     }
+
     #lien-filtre {
         justify-content: start;
-        width: 20%;
+        width: 8%;
+        margin-right: 2px;
         /*border:solid yellow;*/
     }
+
+    #info {
+        margin-bottom: 50px;
+    }
+
+    .titre {
+        padding-left: 20px;
+    }
+
+    .activite .titre-activites {
+        padding-left: 20px;
+        margin-bottom: 40px;
+    }
+
     .liens-container {
         /*width: 50%;*/
     }
+
     .groupe-lien {
         width: 90%;
         margin-bottom: 10px;
         /*border:solid orange;*/
     }
+
     .hebergement-vert {
         flex-direction: column;
         width: 100%;
     }
+
     .hebergement-bleu {
         width: 100%;
         /*background-color: beige;*/
     }
+
     .hebergement-jaune {
         margin-bottom: 10px;
         width: 100%;
         /*background-color:blueviolet;*/
     }
+
     .populaire-rouge {
         width: 100%;
         margin-top: 25px;
+        height: auto;
         /*background-color:gold;*/
     }
+
     .populaire-jaune {
         flex-direction: row;
         width: 100%;
+        margin-top: 0px;
+        justify-content: space-around;
         /*background-color:brown;*/
     }
+
+    .card-container #bleu {
+        margin-bottom: 32px;
+    }
+
     .card-populaire {
         margin: 0px;
-        width: 255px;
+        width: 270px;
     }
+
+    .images-activite .card-activite img {
+        height: 270px;
+    }
+
     .images-activite {
-        width: 100%;
+        justify-content: space-around;
     }
+
     #next a {
         /*font-family: 'Raleway';*/
         font-style: normal;
@@ -575,6 +646,7 @@ h5 {
         font-size: 18px;
         margin-left: 20px;
     }
+
     footer {
         justify-content: space-around;
         background-color: #E6E6E6;
@@ -587,22 +659,31 @@ h5 {
 
 /* sur les ecrans de 768px ou moins (tablette)*/
 
-@media screen and (max-width: 768px) {
-    h2 {
-        /*font-family: 'Raleway';*/
-        font-style: normal;
-        font-weight: 700;
-        font-size: 22px;
-        line-height: 26px;
-        text-align: center;
+@media screen and (max-width: 767px) {
+
+    body {
+        margin: 10px;
     }
+
     h5 {
-        margin-top: 13px;
+        margin-top: 3px;
         margin-bottom: 36px;
+        width: 100%; /*ici*/
+        text-align: start;
     }
+
+    .fa-info {
+        margin-top: 3px; /*ici*/
+    }
+
     #next {
         display: none;
     }
+
+    .Img-hebergement {
+        border-radius: 15px 15px 0px 0px;
+    }
+
     .titre-activites {
         font-style: normal;
         font-weight: 700;
@@ -610,29 +691,35 @@ h5 {
         line-height: 26px;
         padding-right: 160px;
         margin-left: 0px;
+        margin-top: 60px;
     }
+
     .card-container {
-        align-items: flex-start;
+        /*ici*/
         padding-left: 10px;
     }
+
     .groupe-lien {
         width: 100%;
         margin-bottom: 10px;
         gap: 14px;
         /*border:solid orange;*/
     }
+
     .lien {
         width: 100%;
         font-size: 11px;
         line-height: 13px;
         justify-content: start;
     }
+
     nav {
         flex-direction: column;
         justify-content: space-around;
         width: 100%;
         gap: 28px;
     }
+
     #header {
         display: flex;
         flex-direction: column;
@@ -640,30 +727,36 @@ h5 {
         justify-content: center;
         width: 100%;
     }
+
     .menu {
         gap: 91px;
     }
-    .menu a:hover {
-        border-top: none;
-        border-bottom: 2px solid #0065FC;
-        padding-bottom: 20px;
-        padding-top: 0px;
-        color: #0065FC;
-    }
+
+        .menu a:hover {
+            border-top: none;
+            border-bottom: 2px solid #0065FC;
+            padding-bottom: 20px;
+            padding-top: 0px;
+            color: #0065FC;
+        }
+
     .form {
         width: 100%;
         justify-content: space-between;
-        padding-left: 17px;
+        padding-left: 10px;
     }
+
     .rechercher {
         align-items: center;
         justify-content: center;
         width: 100%;
         /*border: solid green;*/
     }
+
     #recherche {
         display: none;
     }
+
     #recherche-loupe {
         background-color: #0065FC;
         color: white;
@@ -672,24 +765,26 @@ h5 {
         justify-content: center;
         align-items: center;
     }
+
     .filtre {
         flex-direction: column;
+        margin-bottom: 50px;
     }
+
     #lien-filtre {
         justify-content: start;
         width: 100%;
-        margin-left: 20px;
-        margin-bottom: 15px;
+        margin-top: 10px;
+        margin-bottom: 10px;
         /*border:solid yellow;*/
     }
-    .liens-container {
-        margin-top: 17px;
-    }
+
     .hebergement-vert {
         flex-direction: column-reverse;
         width: 100%;
         /*border:solid brown;*/
     }
+
     .hebergement-jaune {
         display: flex;
         flex-direction: column;
@@ -697,53 +792,68 @@ h5 {
         height: auto;
         /*border: solid yellow;*/
     }
+
     .hebergement-bleu {
         width: 100%;
         margin-top: 25px;
+        height: auto;
         /*border: solid blue;*/
     }
+
     .card-hebergement {
         width: 100%;
     }
+
     .populaire-jaune {
         flex-direction: column;
+        align-items: center;
         /*border: solid yellow;*/
     }
+
     .populaire-rouge {
         justify-content: center;
         width: 100%;
+        height: auto;
         /*border: solid red;*/
     }
+
     .card-populaire {
-        width: 100%;
+        width: 90%;
         /*border:solid blue;*/
     }
+
     .activite {
         justify-content: center;
         align-items: center;
         /*border: solid green;*/
     }
+
     .images-activite {
         flex-direction: column;
         width: 100%;
         /*border: solid purple;*/
     }
+
     .card-activite {
         width: 100%;
         /*border: solid red;*/
     }
+
     .images-activite .card-activite img {
         /*object-fit: cover;*/
+        object-fit: cover;
         border-radius: 15px 15px 0px 0px;
-        height: 190px;
+        height: 136px;
         /*border:solid orange;*/
     }
+
     footer {
         flex-direction: column;
         align-items: start;
         gap: 30px;
         /*border: solid blue;*/
     }
+
     .propos,
     .assistance,
     .hebergement {
